k8s/redis/redis-network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-policy
  namespace: movie-rater
spec:
  podSelector:
    matchLabels:
      component: redis
  
  policyTypes:
    - Ingress

  ingress:
    - from:
      - podSelector:
          matchLabels:
            component: backend
      ports:
        - protocol: TCP
          port: 6379
